fix(frontend): delete css propery scrollbar-gutte from normalize that page has not uselles offsetY Scroll

--- a/frontend/src/styles/normalize.css
+++ b/frontend/src/styles/normalize.css
@@ -22,10 +22,12 @@ html {
     Убираем скачок интерфейса по горизонтали
     при появлении / исчезновении скроллбара
    */
-  scrollbar-gutter: stable;
+   /* ?????? */
+  /* scrollbar-gutter: stable; */
 }
 
 body {
+  width: 100%;
   min-height: 100%;
   margin: 0;
 }
